--- a/main.css
+++ b/main.css
@@ -116,27 +116,29 @@ button, input[type="submit"]
 }
 
 /* Icons have this nice image in the back that's centered/etc. */
-.icon
+/*.icon
 {
    background-repeat: no-repeat;
    background-position: center center;
    background-size: contain;
    text-align: center;
-   /*width: 3em;
-   height: 2em;*/
-}
+}*/
 
 /* If something is marked as DEFINITELY A CONTAINER FOR AN IMAGE, don't let
  * there be any padding. Just don't. */
-.imageicon
+/*.imageicon
 {
    padding: 0;
-}
+}*/
 
-.imageicon img
+/* An icon should fill its parent container. What if something is marked icon
+ * but it's freestanding? Just don't do that I guess. */
+img.icon
 {
    max-width: 100%;
    max-height: 100%;
+   display: block;
+   margin: auto;
 }
 
 /* If you are a "hover" class, you have some fancy coloring/transitions applied */
