--- a/index.css
+++ b/index.css
@@ -89,7 +89,7 @@ a:hover { color: inherit; }
 .pulse-users {
    background-color: rgba(127,127,127,0.1);
    margin-right: 1em;
-   padding: 0.05em;
+   padding: 0 0.3em;
 }
 .pulse-users [uk-dropdown] { padding: 0.5em; }
 .pulse-users table { margin: 0; } 
@@ -97,6 +97,7 @@ a:hover { color: inherit; }
 .pulse-users table td:first-child { text-align: right; }
 .pulse-users [aria-expanded="true"] {  filter: none; }
 [data-pulseuser] { 
-   margin: 0.3em;   
+   margin: 0.4em 0.2em;   
+   vertical-align: top;
    filter: opacity(0.7);
 }
