--- a/index.css
+++ b/index.css
@@ -4,6 +4,7 @@ body {
    bottom: 0;
    left: 0;
    right: 0;
+   overflow: hidden;
 }
 /* Stuff that should probably be taken over by uikit */
 input[type="file"] { cursor: pointer; }
