--- a/index.css
+++ b/index.css
@@ -52,6 +52,8 @@ a:hover { color: inherit; }
    padding-bottom: 1px;
 }
 .tabnav > div { padding: 0.1em 0; }
+.avatar { border: 1px solid rgba(128,128,128,0.5); }
+[data-routeuser] .avatar { max-width: 150px; }
 /* ------- */
 /* Logging
 /* ------- */
