--- a/index.css
+++ b/index.css
@@ -46,6 +46,9 @@ a:hover { color: inherit; }
    background-color: rgba(128,128,128,0.1);
    padding: 0.1em;
 }
+#maincontentbar img {
+   margin-top: -3px;
+}
 #maincontentbarcontrols {
    float: right;
 }
