--- a/index.css
+++ b/index.css
@@ -187,6 +187,13 @@ a:hover { color: inherit; }
 .content {
    white-space: pre-wrap;
 }
+.pagecontrols {
+   margin-right: -15px !important;
+}
+[data-watch="true"] path {
+   fill: #EE5588; 
+   color: #EE5588; 
+}
 /* CategoryLists */
 [data-pageitem]:nth-child(even) {
    background-color: rgba(128,128,128,0.1);
